Fix for plugins on windows #4200

Closed
opened 2006-05-14 21:11:21 +02:00 by Joseph Eagar · 2 comments
Member

%%%This patch allows plugins on windows to backlink to the exposed blender plugin
API functions. It does this by defining a LIBEXPORT macro, which is "extern" on non-windows platforms, and the appropriate __declspec(dll***) on windows. This macro is prepended to all the wrapped function definitions/prototypes in source/blender/blenpluginapi/intern/pluginap.c.

In addition, I've wrapped the threaded guarededalloc functions (as mallocT, callocT and freeT) so texture plugins can be thread-safe.

To use this patch, first apply it. Then, create an import library (call it libblenderplugin.a on mingw or blenderplugin.lib on msvc) using plugin.DEF. On mingw this would be:

dlltool --input-def plugin.DEF --output-lib libblenerplugin.a --dllname blender.exe

Then, to compiile a plugin, you'd do:

gcc -c plugin.c
gcc -shared -o plugin.dll plugin.o libblenderplugin.a

I don't know the MSVC commands, unfortunately.

joeedh%%%

%%%This patch allows plugins on windows to backlink to the exposed blender plugin API functions. It does this by defining a LIBEXPORT macro, which is "extern" on non-windows platforms, and the appropriate __declspec(dll***) on windows. This macro is prepended to all the wrapped function definitions/prototypes in source/blender/blenpluginapi/intern/pluginap.c. In addition, I've wrapped the threaded guarededalloc functions (as mallocT, callocT and freeT) so texture plugins can be thread-safe. To use this patch, first apply it. Then, create an import library (call it libblenderplugin.a on mingw or blenderplugin.lib on msvc) using plugin.DEF. On mingw this would be: dlltool --input-def plugin.DEF --output-lib libblenerplugin.a --dllname blender.exe Then, to compiile a plugin, you'd do: gcc -c plugin.c gcc -shared -o plugin.dll plugin.o libblenderplugin.a I don't know the MSVC commands, unfortunately. joeedh%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'
Member

Changed status from 'Open' to: 'Archived'

Changed status from 'Open' to: 'Archived'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#4200
No description provided.